update swagger return
