# models/result.go
@@ -1,0 +1,5 @@
+package models
+
+type JSONResult struct {
+	Data interface{} `json:"data"`
+}
